--- a/client/app/app.css
+++ b/client/app/app.css
@@ -18,35 +18,52 @@
 
 }
 
-body{
+body {
     font-family: 'Alef';
 }
 
-.menu {
-    list-style: none;
-    border-bottom: 0.1em solid black;
-    margin-bottom: 2em;
-    padding: 0 0 0.5em;
+.main-view {
+    display: flex;
+    border: 1px solid darkred;
 }
 
-.menu:before {
-    content: "[";
+.voting-panel {
+    align-self: flex-start;
+    width: 70%;
+    display: inline-block;
+    border: 1px solid red;
 }
 
-.menu:after {
-    content: "]";
+.results-panel {
+    width: 20%;
+    display: inline-block;
+    border: 1px solid pink;
 }
 
-.menu > li {
-    display: inline;
+.voting-panel {
+    width: 50%;
+}
+.voting-panel > .vote-headline {
+    text-align: center;
 }
 
-.menu > li:before {
-    content: "|";
-    padding-right: 0.3em;
+.button-set {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.menu > li:nth-child(1):before {
-    content: "";
-    padding: 0;
+.vote-button {
+    text-align: center;
+    border: 2px solid #000000;
+    background-color: lightgray;
+    width: 100px;
+    height: 70px;
+    margin: auto;
+    font-size: x-large;
+}
+
+.vote-button:hover{
+    background-color: darkgray;
+    font-weight: bold;
 }
