--- a/client/app/app.css
+++ b/client/app/app.css
@@ -24,8 +24,8 @@
     box-sizing: border-box;
 }
 
-html, body{
-    min-height:100%;
+html, body {
+    min-height: 100%;
 }
 
 body {
@@ -39,9 +39,6 @@ body {
     text-align: center;
     width: 60%;
     margin: 10px auto;
-}
-
-.voting-panel {
 }
 
 .results-panel {
@@ -59,80 +56,34 @@ body {
 }
 
 .vote-button {
-    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
-    background-image: linear-gradient(top, #f4f1ee, #fff);
-    border-radius: 50%;
-    box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, .3), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgba(204,198,197,.5);
-    float:left;
-    height: 70px;
-    margin: 0 30px 30px 0;
-    position: relative;
-    width: 70px;
-    -webkit-transition: all .1s linear;
-    transition: all .1s linear;
+    border: 2px solid rgba(0, 0, 0, .4);
+    border-radius: 10px;
+    margin: auto;
+    padding: 0 10px 0 10px;
+    cursor: pointer;
 }
 
-.vote-button:after{
-    color:#e9e6e4;
-    content: "";
-    display: block;
-    font-size: 30px;
-    height: 30px;
-    text-decoration: none;
-    text-shadow: 0px -1px 1px #bdb5b4, 1px 1px 1px white;
-    position: absolute;
-    width: 30px;
+.vote-button i {
+    color: #000080;
 }
-.vote-button.for:after {
-    content: "בעד";
-    left: 30px;
-    top: 14px;
-}
-
-.vote-button.against:after {
-    content: "נגד";
-    left: 24px;
-    top: 13px;
-}
-
 
 .vote-button:hover {
-    background-image: -webkit-linear-gradient(top, #fff, #f4f1ee);
-    background-image: linear-gradient(top, #fff, #f4f1ee);
-    color:#0088cc;
+    background-color: #bdb5b4;
 }
 
-
-.vote-button.for:hover:after{
-    color:#83d244;
-    text-shadow:0px 0px 6px #83d244;
+.vote-button:active {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .4), inset 0px -3px 1px 1px rgba(204, 198, 197, .5);
 }
 
-.vote-button.against:hover:after{
-    color:#eb2f2f;
-    text-shadow:0px 0px 6px #eb2f2f;
-}
-
-
-
-.vote-button:active{
-    background-image: -webkit-linear-gradient(top, #efedec, #f7f4f4);
-    background-image: linear-gradient(top, #efedec, #f7f4f4);
-    box-shadow: 0 3px 5px 0 rgba(0,0,0,.4), inset 0px -3px 1px 1px rgba(204,198,197,.5);
-}
-
-.vote-button:active:after{
-    color:#dbd2d2;
+.vote-button:active:after {
     text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
 }
-
 
 .results-item {
     border-radius: 0.8em;
     -moz-border-radius: 0.8em;
     -webkit-border-radius: 0.8em;
     text-decoration: none;
-    text-shadow: 0px -1px 1px #bdb5b4, 1px 1px 1px white;
     color: #ffffff;
     display: inline-block;
     font-weight: bold;
@@ -155,10 +106,8 @@ body {
 }
 
 .results-item.known {
-     cursor: pointer;
-
- }
-
+    cursor: pointer;
+}
 
 .results-item.known.for {
     background-color: #83d244;
@@ -170,6 +119,37 @@ body {
 }
 
 .results-item.active {
-    border-left: none;
-    color: #000000;
+    background-color: gray;
+    border: 1px double black;
+
+}
+
+.end-voting-button {
+    margin-top: 6%;
+    border: 2px solid gray;
+    border-radius: 4px;
+    display: inline-block;
+
+}
+
+.end-voting-button:hover {
+    background-color: #bdb5b4;
+    cursor: pointer;
+}
+
+.end-voting-button > *{
+    padding-left: 18px;
+    padding-right: 18px;
+    margin: 0;
+}
+.end-voting-button:hover > i{
+    color: navy;
+}
+
+.end-voting-button:active {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .4), inset 0px -3px 1px 1px rgba(204, 198, 197, .5);
+}
+
+.end-voting-button:active:after {
+    text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
 }
