--- a/client/app/app.css
+++ b/client/app/app.css
@@ -36,8 +36,9 @@ body {
 }
 
 .main-view {
+    width:90%;
     text-align: center;
-    width: 60%;
+    max-width: 1000px;
     margin: 10px auto;
 }
 
@@ -87,9 +88,9 @@ body {
     color: #ffffff;
     display: inline-block;
     font-weight: bold;
-    line-height: 1.6em;
+    line-height: 1.4em;
+    width: 1.4em;
     text-align: center;
-    width: 1.6em;
     cursor: default;
     text-align: center;
     font-weight: bold;
